--- a/components.json
+++ b/components.json
@@ -5,13 +5,13 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "./src/renderer/src/assets/main.css",
+    "css": "~/assets/main.css",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
   "aliases": {
-    "components": "~/renderer/components",
-    "utils": "~/renderer/lib/utils"
+    "components": "~/components",
+    "utils": "~/lib/utils"
   }
 }
