--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -12,7 +12,10 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "~/renderer/*": ["./src/renderer/src/*"]
+      "~/renderer/*": ["./src/renderer/src/*"],
+      "~/assets/*": ["./src/renderer/src/assets/*"],
+      "~/components/*": ["./src/renderer/src/components/*"],
+      "~/lib/*": ["./src/renderer/src/lib/*"]
     }
   }
 }
