--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.417.0",
     "next-themes": "^0.3.0",
+    "react-day-picker": "8.10.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.5.0",
