--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lobgook-app",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "kairos.example.com",
@@ -53,6 +53,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
